--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr" dir="ltr">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- Semantic UI -->
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <script
